--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,6 +39,9 @@
       ],
       "@spartan-ng/ui-icon-helm": [
         "./spartan-ui/ui-icon-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-toggle-helm": [
+        "./spartan-ui/ui-toggle-helm/src/index.ts"
       ]
     }
   },
