--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@spartan-ng/ui-checkbox-brain": "0.0.1-alpha.352",
     "@spartan-ng/ui-core": "^0.0.1-alpha.352",
     "@spartan-ng/ui-label-brain": "0.0.1-alpha.352",
+    "@spartan-ng/ui-table-brain": "0.0.1-alpha.352",
     "@spartan-ng/ui-toggle-brain": "0.0.1-alpha.352",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
