--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ng-icons/lucide": "^26.3.0",
     "@spartan-ng/ui-checkbox-brain": "0.0.1-alpha.352",
     "@spartan-ng/ui-core": "^0.0.1-alpha.352",
+    "@spartan-ng/ui-dialog-brain": "0.0.1-alpha.352",
     "@spartan-ng/ui-label-brain": "0.0.1-alpha.352",
     "@spartan-ng/ui-table-brain": "0.0.1-alpha.352",
     "@spartan-ng/ui-toggle-brain": "0.0.1-alpha.352",
